# jellirag-with-rbac

./: .gitignore  PRD.md  README.md
apps/backend/: .dev.env.example  .gitignore  Dockerfile  README.md  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/budget/: manager.py
apps/backend/app/config/: settings.py
apps/backend/app/routers/: admin.py  auth.py  chat.py  history.py  jellyfin.py  sync.py
apps/backend/app/security/: deps.py  jwt.py  passwords.py
apps/backend/app/services/: ai_provider.py  bootstrap.py  broker_client.py  chunks.py  db.py  jellyfin_client.py  prompts.py  scheduler.py  sse.py  sync_service.py
apps/broker/: .dev.vars.example  package.json  pnpm-lock.yaml  provision.sh  tsconfig.json  wrangler.jsonc
apps/broker/migrations/: 0001_initial_schema.sql
apps/broker/src/: ai.ts  db.ts  env.ts  history.ts  index.ts  lib.ts  limits.ts  security.ts
apps/broker/src/routes/: history.ts  ingest.ts  rag.ts  sessions.ts  sync.ts  users.ts
apps/frontend/: Dockerfile  astro.config.mjs  package.json  pnpm-lock.yaml
apps/frontend/src/components/: Admin.vue  Chat.vue  Login.vue
apps/frontend/src/layouts/: Layout.astro
apps/frontend/src/lib/: auth.ts
apps/frontend/src/pages/: admin.astro  index.astro  login.astro
deploy/: README.md  docker-compose.yml  ollama-setup.md
