[project]
name = "backend"
version = "0.1.0"
description = "JellieRAG FastAPI backend — RAG orchestration, auth, sync"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi[standard]>=0.137.1",
    "httpx>=0.28.1",
    "pyjwt>=2.10.0",
    "apscheduler>=3.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
jellirag-backend = "app.main:main"
